# cross-socket

./: .gitignore  CMakeLists.txt  Changelog.md  README.md
include/: CrossSocket.h  CrossSocketUtils.h  SocketManager.h
include/CrossSocket/: CrossSocketUtils.h  Socket.h  SocketManager.h
src/: CrossSocket.cpp  CrossSocketUtils.cpp  Socket.cpp  SocketManager.cpp
